--- a/src/components/Sider/sider.less
+++ b/src/components/Sider/sider.less
@@ -1,22 +1,18 @@
-.logo {
-    text-align: center;
-    height: 100px;
-    padding: 25px 0;
-    overflow: hidden;
-    cursor: pointer;
-}
-
 .dva {
     width: 50px;
 }
 
+.logo {
+    cursor: pointer;
+}
+
 .title {
     vertical-align: text-bottom;
-    font-size: 20px;
-    text-transform: uppercase;
-    display: inline;
+    font-size: 18px;
+    display: inline-block;
+    padding-left: 1.5rem;
     text-align: center;
-    line-height: 50px;
+    line-height: 4rem;
 }
 
 .white {
